# optica

./: Cargo.toml  README.md  ROADMAP.md  default-config.toml
root/: README.md
src/: compile.rs  config.rs  lib.rs  lunar.rs  main.rs  model_query.rs  validator.rs
src/graph/: links.rs  mod.rs  namespaces.rs  pagerank.rs  stats.rs  tags.rs  trikernel.rs
src/output/: feed.rs  files.rs  graph.rs  media.rs  mod.rs  search.rs  sitemap.rs
src/parser/: admonitions.rs  mod.rs  outliner.rs  properties.rs  wikilinks.rs
src/query/: eval.rs  mod.rs  parse.rs
src/render/: context.rs  mod.rs  templates.rs  toc.rs  transform.rs
src/scanner/: classify.rs  mod.rs  subgraph.rs  subgraph_config.rs
src/server/: mod.rs  reload.rs
static/: graph.js  search.js  style.css  topics.js
templates/: 404.html  base.html  blog.html  files.html  graph.html  index.html  journal.html  page.html  tag.html  tags-index.html
templates/partials/: backlinks.html  nav.html
tests/: incremental_rebuild.rs
tests/fixtures/journals/: 2025_02_08.md
tests/fixtures/pages/: Bostrom.md  Collective Focus Theorem.md  Mycorrhizal Networks.md  Private Page.md
